--- a/mystyles.css
+++ b/mystyles.css
@@ -119,7 +119,7 @@ header,
      font-family: Helvetica, Arial, sans-serif;
      font-weight: 100;
      color: #962D3E;
-     text-align: left;
+     text-align: center;
      padding-top: 30px;
     
  }
