--- a/mystyles.css
+++ b/mystyles.css
@@ -9,7 +9,10 @@ header,
  h2,
  h3
  
-
+ #container {
+     max-width: 1200px;
+     margin: 0 auto;
+ }
  nav { 
      font-family: Helvetica, Arial, sans-serif;
      font-weight: 200;
