--- a/mystyles.css
+++ b/mystyles.css
@@ -187,9 +187,10 @@ header,
  }
  
  #content {
+     font-family: Helvetica, Arial, sans-serif;
+     width: 64%;
+     padding: 3%;
      margin: auto;
-     width: 60%;
-     padding: 1px;
      }
  }
      
