--- a/mystyles.css
+++ b/mystyles.css
@@ -74,9 +74,11 @@ header,
  }
  
  .center {
+     font-family: Helvetica, Arial, sans-serif;
+     width: 64%;
+     padding: 3%;
      margin: auto;
-     width: 60%;
-     padding: 1px;
+     
  } 
  
  body {
